# ocaml5-tutorial

./: .gitignore  LICENSE  README.md  dune-project  ocaml5_tutorial.opam
lib/: dune
solutions/: dune  fib_par.ml  game_of_life_par.ml  mergesort_par.ml  prod_cons_b.ml  prod_cons_nb.ml  tak_par.ml
src/: dune  fib.ml  fib_domainslib.ml  fib_par.ml  fib_twice.ml  game_of_life.ml  game_of_life_par.ml  incr.ml  incr_cas.ml  mandelbrot.ml  mandelbrot_par.ml  msg_passing.ml  par.ml  prod_cons_b.ml  prod_cons_nb.ml  spectralnorm.ml  spectralnorm_par.ml  tak.ml  tak_par.ml
