(executable
 (name fib_par)
 (modules fib_par)
 (libraries ocaml5_tutorial))

(executable
 (name prod_cons_nb)
 (modules prod_cons_nb)
 (libraries ocaml5_tutorial))

(executable
 (name prod_cons_b)
 (modules prod_cons_b)
 (libraries ocaml5_tutorial))

(executable
 (name tak_par)
 (modules tak_par)
 (libraries ocaml5_tutorial domainslib))
